--- a/public/assets/styles/components/private-limited-company-registration/_Hero.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_Hero.scss
@@ -60,19 +60,35 @@
         }
     }
     .landing-hero-content{
-        display: grid;
-        grid-gap: 81px;
-        place-items: center;
-        grid-template-columns: repeat(2, 1fr);
-        margin: 35px 90px;
+        display: flex;
+        justify-content: center;
+        gap: 110px;
+
+        @include tablet{
+            flex-direction: column;
+        }
+
         .hero-left{
             color: #004CD2;
+            display: flex;
+            flex-direction: column;
+            padding-left: 90px;
+            padding-top: 72px;
+            @include tablet{
+                padding-left: 10px;
+                padding-top: 10px;
+            }
+            @include mobile{
+                padding-left: 0;
+                padding-top: 0;
+            }
             h1{
                 font-size: 40px;
                 font-weight: 700;
                 line-height: 48.76px;
                 letter-spacing: 2.4px;
                 margin-bottom: 18px;
+                width: 100%;
                 @include mobile{
                     font-size: 24px;
                     font-weight: 600;
@@ -82,7 +98,7 @@
                 }
             }
             p{
-                width: 74%;
+                width: 100%;
                 font-size: 24px;
                 font-weight: 500;
                 line-height: 29.26px;
@@ -209,12 +225,18 @@
             }
         }
         .hero-right{
-            max-width: 410px;
-            max-height: 433px;
+            max-width: 50%;
+            // max-height: 433px;
             border: none;
             border-radius: 15px;
+            margin-top: 132px;
+            padding-right: 100px;
             @include tablet{
-                width: 100%;
+                margin: auto;
+                max-width: 433px;
+                height: 100%;
+                margin-top: 0;
+                padding-right: 0;
             }
         }
         @include tablet{
