--- a/public/assets/styles/components/private-limited-company-registration/_Hero.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_Hero.scss
@@ -163,6 +163,19 @@
                 div{
                     display: flex;
                     align-items: center;
+
+                    .free-gst{
+                        display: none;
+                        @include tablet{
+                            display:  block;
+                            margin-right: 10px;
+
+                        }
+                        @include mobile{
+                            width: 52.04px;
+                            height: 71.31px;
+                        }
+                    }
                     .review-star{
                         display: none;
                         @include mobile{
@@ -225,12 +238,42 @@
             }
         }
         .hero-right{
+            position: relative;
             max-width: 50%;
-            // max-height: 433px;
             border: none;
             border-radius: 15px;
             margin-top: 132px;
             padding-right: 100px;
+            .free-book{
+                position: absolute;
+                width: 107px;
+                height: 127.35px;
+                left:-78px;
+                top:-20px;
+                @include tablet{
+                    left:90%;
+                    width: 52.04px;
+                    height: 71.31px;
+                    top:-2px;
+
+                }
+
+                @include mobile{
+                    left:88%;
+                    width: 42.04px;
+                    height: 61.31px;
+                }
+            }
+              .free-gst{
+                position: absolute;
+                width: 107px;
+                height: 127.35px;
+                right:43px;
+                top:-40px;
+                @include tablet{
+                    display: none;
+                }
+            }
             @include tablet{
                 margin: auto;
                 max-width: 433px;
