form new design, othercomponent design fix

--- a/public/assets/styles/components/private-limited-company-registration/_all-one-business.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_all-one-business.scss
@@ -92,7 +92,7 @@
         border-radius: 15px;
         border: 1px solid #3F78E0;
         background-color: #FFFDF5;
-       
+        margin: auto;
         @include tablet{
           max-width: 990px;
           padding: 8px 16px 8px 16px;
