--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -60,4 +60,5 @@
 @import "./components/private-limited-company-registration/landingpage3-footer";
 @import "./components/private-limited-company-registration/landingpage3-test-slider";
 @import "./components/private-limited-company-registration/what-time-it-is";
+@import "./components/private-limited-company-registration/ZohoformServicePvt";
 
