--- a/public/assets/styles/components/private-limited-company-registration/_Hero.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_Hero.scss
@@ -8,6 +8,7 @@
     background-position: center;
     width: 100vw;
     height: auto;
+
     .hero-notice{
         text-align: center;
         background: linear-gradient(#FF7300, #FF7300, #FE9C28);
@@ -15,10 +16,12 @@
         gap: 23px;
         justify-content: center;
         align-items: center;
+
         .text-data{
             font-weight: 600;
             color: #FFFFFF;
             text-align: left;
+           
             div{
                 font-family: Outfit;
                 display: inline;
@@ -159,7 +162,12 @@
                 }
             }
             .user-reviews{
-                font-family: Product Sans Medium;
+               margin-left: 78px;
+
+               @include tablet{
+                margin-left: 0;
+               }
+
                 div{
                     display: flex;
                     align-items: center;
@@ -197,19 +205,25 @@
                         }
                     }
                     .googleImg{
-                        @include mobile{
-                            width: 40px;
-                            height: 40px;
-                            border-radius: 20px;
-                            border: none;
+                        width: 64px;
+                        height: 64px;
+                        gap: 0px;
+                        opacity: 0px;
+
+                        @include tablet{
+                            width: 28px;
+                            height: 28px;
                         }
                     }
                 }
                 p{
+                    font-family: Product Sans Medium;
                     font-size: 20px;
                     font-weight: 500;
                     line-height: 23.6px;
-                    letter-spacing: 2.4px;
+                    letter-spacing: 0.1em;
+                    text-align: left;
+
                     color: #000000;
                     margin-top: 12px;
                     @include mobile{
@@ -239,27 +253,39 @@
         }
         .hero-right{
             position: relative;
-            max-width: 50%;
+            max-width: 410px !important;
+            margin: auto !important;
+            height: 100%;
             border: none;
             border-radius: 15px;
             margin-top: 132px;
-            padding-right: 100px;
+            margin-right: 77px !important;
+            @include tablet{
+                display: flex;
+                justify-content: center;
+                margin-top: 0 !important;
+                margin-bottom: 0px;
+                margin-right:auto !important;
+                margin-left:auto !important;
+                margin-right: 77px;
+                width: 100%;
+                box-shadow: 0px 5px 5px rgba(155, 154, 154, 0.61);
+               
+            }
             .free-book{
                 position: absolute;
                 width: 107px;
                 height: 127.35px;
-                left:-78px;
-                top:-20px;
+                left:-61px;
+                top:-10px;
                 @include tablet{
-                    left:90%;
+                    left:93%;
                     width: 52.04px;
                     height: 71.31px;
-                    top:-2px;
 
                 }
 
                 @include mobile{
-                    left:88%;
                     width: 42.04px;
                     height: 61.31px;
                 }
@@ -268,19 +294,14 @@
                 position: absolute;
                 width: 107px;
                 height: 127.35px;
-                right:43px;
-                top:-40px;
+                right:-20px;
+                top:-30px;
                 @include tablet{
                     display: none;
                 }
             }
-            @include tablet{
-                margin: auto;
-                max-width: 433px;
-                height: 100%;
-                margin-top: 0;
-                padding-right: 0;
-            }
+          
+
         }
         @include tablet{
             grid-template-columns: 1fr;
@@ -288,6 +309,7 @@
         }
         @include mobile{
             margin: 12px 16px;
+            margin-right: 20px;
         }
     }
     @media screen and (max-width: 550px) {
