--- a/public/assets/styles/components/private-limited-company-registration/_all-one-business.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_all-one-business.scss
@@ -95,6 +95,7 @@
         margin: auto;
         @include tablet{
           max-width: 990px;
+          width: 100%;
           padding: 8px 16px 8px 16px;
           gap: 16px;
           border-width: 1px 1px 0 1px;
