--- a/public/assets/styles/components/_flexible.scss
+++ b/public/assets/styles/components/_flexible.scss
@@ -122,7 +122,7 @@
 
     .active{
       background: #4CAF50;
-      
+      transition: background-color 0.3s ease-in, color 0.3s ease-in;
       color: white;
       border-radius: 50px;
       border: 1px solid #D7D7D7;
