--- a/public/assets/styles/components/private-limited-company-registration/_client-testimonials.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_client-testimonials.scss
@@ -48,15 +48,16 @@
     
         .content{
             display: flex;
-            justify-content: center;
             gap: 3.25rem;
             margin-top: 6rem;
-    
+            @include tablet{
+                flex-direction: column;
+            }
             div:nth-child(1){
                 p{
                     max-width: 500px;
                     font-family: Montserrat;
-                    font-size: 54px;
+                    font-size: 44px;
                     font-weight: 600;
                     line-height: 64px;
                     text-align: center;
@@ -66,7 +67,7 @@
     
                     span{
                         font-family: Montserrat;
-                        font-size: 54px;
+                        font-size: 44px;
                         font-weight: 600;
                         line-height: 64px;
                         text-align: center;
@@ -78,27 +79,27 @@
                         -webkit-text-fill-color: transparent;
                     }
                 }
-                div{
-                    height: 3px;
-                    background: #004CD2;
-                    width: 30%;
-                    max-width: 180px;
-                    transform: translateX(150%);
-                    margin-top: 0.5rem;
-                }
             }
     
             div:nth-child(2){
-                img{
-                    width: 100%;
-                    object-fit: cover;
+                width: 95%;
+                .stars{
+                    justify-content: center;
                 }
-
-                border-radius: 1rem;
-                overflow: hidden;
-                -webkit-box-shadow: 0px 3px 7px 1px rgba(254,116,2,0.78);
-                -moz-box-shadow: 0px 3px 2px 1px rgba(254,116,2,0.78);
-                box-shadow: 0px 3px 7px 1px rgba(254,116,2,0.78);
+                .client{
+                    text-align: center;
+                }
+                p{
+                    font-family: Montserrat;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 20px;
+                    color: #333333;
+                    text-align: left;
+                    @include tablet{
+                        font-size: 11px;
+                    }
+                }
             }
     
         }
