--- a/public/assets/styles/components/private-limited-company-registration/_landingpage3-test-slider.scss
+++ b/public/assets/styles/components/private-limited-company-registration/_landingpage3-test-slider.scss
@@ -4,7 +4,6 @@
     .container{
         padding: 8rem 0;
         width: 90%;
-        max-width: 1080px;
         margin: 0 auto;
 
         @include mobile{
@@ -24,7 +23,7 @@
                 border: 1px solid #BDBDBD;
                 border-radius: 1rem;
                 height: 100%;
-
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -67,7 +66,7 @@
         }
         .right-arrow{
             transform: translateY(-150%);
-            
+
         }
     }
 }
